--- a/gammastep.1
+++ b/gammastep.1
@@ -1,11 +1,11 @@
 .TH REDSHIFT 1
 .SH NAME
-redshift \- set color temperature of display according to time of day
+gammastep \- set color temperature of display according to time of day
 .SH SYNOPSIS
-.B redshift
+.B gammastep
 \fR[\fB\-l\fR \fILAT\fB:\fILON\fR | \fB\-l\fR \fIPROVIDER\fB:\fIOPTIONS\fR] [\fB\-t\fR \fIDAY\fB:\fINIGHT\fR] [\fIOPTIONS\fR...]
 .SH DESCRIPTION
-.B redshift
+.B gammastep
 adjusts the color temperature of your screen according to your
 surroundings. This may help your eyes hurt less or reduce the risk for
 delayed sleep phase syndrome if you are working in front of the screen
@@ -22,9 +22,9 @@ the color temperature should match the light from outside, typically
 around 5500K\-6500K (default is 6500K). The light has a higher
 temperature on an overcast day.
 .PP
-In addition to the command-line tool \fBredshift\fR, the GUI
-\fBredshift-gtk\fR provides an alternative interface that shows up as a
-notification icon in the desktop environment.
+In addition to the command-line tool \fBgammastep\fR, the GUI
+\fBgammastep-indicator\fR provides an alternative interface that shows
+up as a notification icon in the desktop environment.
 .SH OPTIONS
 .TP
 \fB\-h\fR
@@ -92,11 +92,11 @@ Default temperature values:
 .IP
 Daytime: 6500K, night: 4500K
 .SH CONFIGURATION FILE
-A configuration file with the name \fIredshift.conf\fR can optionally be
-placed in \fI~/.config/redshift/\fR (if the environment variable
-XDG_CONFIG_HOME is undefined) or \fI${XDG_CONFIG_HOME}/redshift/\fR
+A configuration file with the name \fIconfig.ini\fR can optionally be
+placed in \fI~/.config/gammastep/\fR (if the environment variable
+XDG_CONFIG_HOME is undefined) or \fI${XDG_CONFIG_HOME}/gammastep/\fR
 (if XDG_CONFIG_HOME is defined). The file has standard INI format. General
-program options are placed under the \fBredshift\fR header, while options
+program options are placed under the \fBgeneral\fR header, while options
 for location providers and adjustment methods are placed under a
 header with the name of that provider or method. General options are:
 .TP
@@ -107,8 +107,7 @@ Daytime temperature
 Night temperature
 .TP
 \fBfade\fR = \fI0 or 1\fR
-Disable or enable fading between color temperatures when Redshift starts or
-stops
+Disable or enable fading between color temperatures.
 .TP
 \fBbrightness\-day\fR = \fI0.1\-1.0\fR
 Screen brightness at daytime
@@ -154,13 +153,13 @@ the help output of the providers and methods.
 .SH EXAMPLE
 Example for Copenhagen, Denmark:
 .IP
-\fB$\fR redshift \-l 55.7:12.6 \-t 5700:3600 \-g 0.8 \-m randr \-v
+\fB$\fR gammastep \-l 55.7:12.6 \-t 5700:3600 \-g 0.8 \-m randr \-v
 .PP
 An example configuration file with the same effect as the above
 command line:
 .IP
 .nf
-[\fBredshift\fR]
+[\fBgeneral\fR]
 temp\-day=5700
 temp\-night=3600
 gamma=0.8
@@ -172,14 +171,14 @@ lat=55.7
 lon=12.6
 .fi
 .SH HOOKS
-Executables (e.g. scripts) placed in folder \fI~/.config/redshift/hooks\fR
+Executables (e.g. scripts) placed in folder \fI~/.config/gammastep/hooks\fR
 will be run when a certain event happens. The first parameter to the
 script indicates the event and further parameters may indicate
 more details about the event. The event \fBperiod-changed\fR is indicated
 when the period changes (\fBnight\fR, \fBdaytime\fR, \fBtransition\fR). The second
 parameter is the old period and the third is the new period. The event
-is also signaled when Redshift starts up with the old period set to
-\fBnone\fR. Any dotfiles in the folder are skipped.
+is also signaled at startup with the old period set to \fBnone\fR.
+Any dotfiles in the folder are skipped.
 .PP
 A simple script to handle these events can be written like this:
 .IP
@@ -187,21 +186,22 @@ A simple script to handle these events can be written like this:
 #!/bin/sh
 case \fB$1\fR in
     \fBperiod-changed\fR)
-        exec notify-send "Redshift" "Period changed to \fB$3\fR"
+        exec notify-send "Gammastep" "Period changed to \fB$3\fR"
 esac
 .fi
 .SH AUTHOR
-.B redshift
-was written by Jon Lund Steffensen <jonlst@gmail.com>.
+.B gammastep
+was written by Jon Lund Steffensen <jonlst@gmail.com>,
+and is now maintained by Cameron Nemo <cnemo@tutanota.com>.
 .PP
 Both
-.B redshift
+.B gammastep
 and this manual page are released under the GNU General Public
 License, version 3.
 .SH BUGS
-Please report bugs to <https://github.com/jonls/redshift/issues>
+Please report bugs to <https://gitlab.com/chinstrap/gammastep/issues>
 .SH KNOWN ISSUES
-.B redshift
+.B gammastep
 will not affect the color of your cursor when your graphics driver
 is configured to use hardware cursors. Some graphics drivers have an
 option to disable hardware cursors.
