--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -19,14 +19,13 @@ msgstr ""
 "X-Generator: Launchpad (build 18658)\n"
 
 #: ../data/appdata/gammastep-indicator.appdata.xml.in.h:1
-#, fuzzy
 msgid ""
 "Adjusts the color temperature of your screen according to your surroundings. "
 "This may help your eyes hurt less if you are working in front of the screen "
 "at night."
 msgstr ""
-"Redshift ajusta a temperatura da cor de sua tela de acordo com o que o "
-"cerca. Isso ajuda a irritar menos os olhos se você está trabalhando em "
+"Gammastep ajusta a temperatura da cor de sua tela de acordo com o seu ambiente. "
+"Isso poder ajudar a irritar menos os olhos se você está trabalhando em "
 "frente a uma tela à noite."
 
 #: ../data/appdata/gammastep-indicator.appdata.xml.in.h:2
@@ -42,17 +41,16 @@ msgstr ""
 "para o dia para que seus olhos lentamente se adaptem."
 
 #: ../data/appdata/gammastep-indicator.appdata.xml.in.h:3
-#, fuzzy
 msgid ""
 "This program provides a status icon that allows the user to control color "
 "temperature."
 msgstr ""
-"Esse programa exibe um ícone de status para que seja possível controlar o "
-"Redshift."
+"Esse programa exibe um ícone de status para que permite ao usuário controlar "
+"a temperature de cor."
 
 #: ../data/applications/gammastep.desktop.in.h:1
 msgid "gammastep"
-msgstr ""
+msgstr "gammastep"
 
 #: ../data/applications/gammastep.desktop.in.h:2
 msgid "Color temperature adjustment"
@@ -64,12 +62,11 @@ msgstr "Ferramenta de ajuste de temperatura de cor"
 
 #: ../data/applications/gammastep-indicator.desktop.in.h:1
 msgid "Gammastep Indicator"
-msgstr ""
+msgstr "Indicador Gammastep"
 
 #: ../data/applications/gammastep-indicator.desktop.in.h:2
-#, fuzzy
 msgid "Indicator for color temperature adjustment"
-msgstr "Ajuste de temperatura de cor"
+msgstr "Indicador para ajuse de temperatura de cor"
 
 #. TRANSLATORS: Name printed when period of day is unknown
 #: ../src/redshift.c:92
@@ -96,9 +93,8 @@ msgstr "Período"
 
 #: ../src/redshift.c:188 ../src/redshift.c:958 ../src/redshift.c:965
 #: ../src/redshift.c:1018
-#, fuzzy
 msgid "Day"
-msgstr "Manhã"
+msgstr "Dia"
 
 #. TRANSLATORS: Abbreviation for `north'
 #: ../src/redshift.c:198
@@ -125,93 +121,78 @@ msgid "Location"
 msgstr "Localização"
 
 #: ../src/redshift.c:280
-#, fuzzy
 msgid "Failed to initialize provider"
-msgstr "Não foi possível iniciar o provedor %s.\n"
+msgstr "Não foi possível inicializar provedor"
 
 #: ../src/redshift.c:294 ../src/redshift.c:334 ../src/redshift.c:378
 #: ../src/redshift.c:404
-#, fuzzy
 msgid "Failed to set option"
-msgstr "Não foi possível definir a opção %s.\n"
+msgstr "Não foi possível definir opção"
 
 #: ../src/redshift.c:297 ../src/redshift.c:336
 msgid "For more information, use option:"
-msgstr ""
+msgstr "Para mais informação, utilize a opção:"
 
 #: ../src/redshift.c:324 ../src/redshift.c:395
-#, fuzzy
 msgid "Failed to parse option"
-msgstr "Falha ao analisar opção `%s'.\n"
+msgstr "Falha ao analisar opção"
 
 #: ../src/redshift.c:349
-#, fuzzy
 msgid "Failed to start provider"
-msgstr "Não foi possível iniciar o provedor %s.\n"
+msgstr "Não foi possível iniciar provedor"
 
 #: ../src/redshift.c:364
-#, fuzzy
 msgid "Failed to initialize method"
-msgstr "Não foi possível iniciar método de ajuste %s.\n"
+msgstr "Não foi possível iniciar método de ajuste"
 
 #: ../src/redshift.c:379 ../src/redshift.c:405
-#, fuzzy
 msgid "For more information, try:"
-msgstr "Tente `-h' para mais informações.\n"
+msgstr "Para mais informações, tente:"
 
 #: ../src/redshift.c:417
-#, fuzzy
 msgid "Failed to start adjustment method"
-msgstr "Não foi possível iniciar método de ajuste %s.\n"
+msgstr "Não foi possível iniciar método de ajuste"
 
 #: ../src/redshift.c:445
-#, fuzzy
 msgid "Latitude must be in range"
-msgstr "Latitude deve estar entre %.1f e %.1f.\n"
+msgstr "Latitude deve estar entre"
 
 #: ../src/redshift.c:452
-#, fuzzy
 msgid "Longitude must be in range:"
-msgstr "Longitude deve estar entre %.1f e %.1f.\n"
+msgstr "Longitude deve estar entre:"
 
 #: ../src/redshift.c:479 ../src/redshift.c:497 ../src/redshift.c:624
 #: ../src/redshift.c:1096
-#, fuzzy
 msgid "Unable to read system time."
-msgstr "Não foi possível determinar a hora do sistema.\n"
+msgstr "Não foi possível determinar a hora do sistema."
 
 #: ../src/redshift.c:567
-#, fuzzy
 msgid "Waiting for initial location to become available..."
-msgstr "Esperando que a localização inicial esteja disponível...\n"
+msgstr "Esperando que a localização inicial esteja disponível..."
 
 #: ../src/redshift.c:572 ../src/redshift.c:763 ../src/redshift.c:777
 #: ../src/redshift.c:1081
-#, fuzzy
 msgid "Unable to get location from provider."
-msgstr "Não foi possível determinar a localização pelo provedor.\n"
+msgstr "Não foi possível determinar a localização pelo provedor."
 
 #: ../src/redshift.c:577 ../src/redshift.c:800
-#, fuzzy
 msgid "Invalid location returned from provider."
-msgstr "Localização inválida retornado do provedor\n"
+msgstr "Localização inválida retornada do provedor"
 
 #: ../src/redshift.c:584 ../src/redshift.c:715 ../src/redshift.c:1130
 #: ../src/redshift.c:1155 ../src/gammastep_indicator/statusicon.py:307
 #: ../src/gammastep_indicator/statusicon.py:325
 msgid "Color temperature"
-msgstr "Temperatura das Cores"
+msgstr "Temperatura de cor"
 
 #: ../src/redshift.c:585 ../src/redshift.c:718 ../src/redshift.c:1003
 #: ../src/redshift.c:1131
-#, fuzzy
 msgid "Brightness"
-msgstr "Brilho: %.2f\n"
+msgstr "Brilho"
 
 #: ../src/redshift.c:614
-#, fuzzy
 msgid "Status"
-msgstr "Estado: %s\n"
+msgstr "Estado"
 
 #: ../src/redshift.c:614 ../src/gammastep_indicator/statusicon.py:302
 msgid "Disabled"
@@ -224,117 +205,98 @@ msgstr "Ativado"
 
 #: ../src/redshift.c:727 ../src/redshift.c:1139 ../src/redshift.c:1163
 #: ../src/redshift.c:1184
-#, fuzzy
 msgid "Temperature adjustment failed."
-msgstr "O ajuste de temperatura falhou.\n"
+msgstr "O ajuste de temperatura falhou."
 
 #: ../src/redshift.c:783
-#, fuzzy
 msgid ""
 "Location is temporarily unavailable; Using previous location until it "
 "becomes available..."
 msgstr ""
 "A localização está temporariamente indisponível; Usando a localização "
-"anterior até ficar disponível ...\n"
+"anterior até ficar disponível ..."
 
 #: ../src/redshift.c:890
-#, fuzzy
 msgid "Partial time-configuration unsupported!"
-msgstr "Configuração parcial de tempo não suportada!\n"
+msgstr "Configuração parcial de tempo não suportada!"
 
 #: ../src/redshift.c:897
-#, fuzzy
 msgid "Invalid dawn/dusk time configuration!"
-msgstr "Configuração do amanhacer/anoitecer inválida!\n"
+msgstr "Configuração do amanhacer/anoitecer inválida!"
 
 #: ../src/redshift.c:926
-#, fuzzy
 msgid "Trying location provider"
-msgstr "Tentando provedor de localização `%s'...\n"
+msgstr "Tentando provedor de localização"
 
 #: ../src/redshift.c:931
-#, fuzzy
 msgid "Trying next provider..."
-msgstr "Tentando próximo provedor...\n"
+msgstr "Tentando próximo provedor..."
 
 #: ../src/redshift.c:936
-#, fuzzy
 msgid "Using provider:"
-msgstr "Usando provedor `%s'.\n"
+msgstr "Usando provedor:"
 
 #: ../src/redshift.c:944
-#, fuzzy
 msgid "No more location providers to try."
-msgstr "Não há mais provedores de localização para contactar.\n"
+msgstr "Não há mais provedores de localização para contactar."
 
 #: ../src/redshift.c:952
 msgid ""
 "High transition elevation cannot be lower than the low transition elevation."
 msgstr ""
+"Elevação superior do sol não pode ser menor que a elevação mais baixa."
 
 #: ../src/redshift.c:958
-#, fuzzy
 msgid "Solar elevations"
-msgstr "Elevação solar: %f\n"
+msgstr "Elevações solares"
 
 #: ../src/redshift.c:965
-#, fuzzy
 msgid "Temperatures"
-msgstr "Temperatura: %i\n"
+msgstr "Temperaturas"
 
 #: ../src/redshift.c:975 ../src/redshift.c:986
-#, fuzzy
 msgid "Temperature must be in range"
-msgstr "Latitude deve estar entre %.1f e %.1f.\n"
+msgstr "Temperatura deve estar entre"
 
 #: ../src/redshift.c:997
-#, fuzzy
 msgid "Brightness must be in range"
-msgstr "Latitude deve estar entre %.1f e %.1f.\n"
+msgstr "Brilho deve estar entre"
 
 #: ../src/redshift.c:1010
-#, fuzzy
 msgid "Gamma value must be in range"
-msgstr "Latitude deve estar entre %.1f e %.1f.\n"
+msgstr "Gama deve estar entre"
 
 #: ../src/redshift.c:1018 ../src/redshift.c:1022
 msgid "Gamma"
-msgstr ""
+msgstr "Gama"
 
 #: ../src/redshift.c:1049
-#, fuzzy
 msgid "Trying next method..."
-msgstr "Tentando próximo método...\n"
+msgstr "Tentando próximo método..."
 
 #: ../src/redshift.c:1054
-#, fuzzy
 msgid "Using method"
-msgstr "Usando o método `%s'.\n"
+msgstr "Usando método"
 
 #: ../src/redshift.c:1061
-#, fuzzy
 msgid "No more methods to try."
-msgstr "Não há mais métodos a testar.\n"
+msgstr "Não há mais métodos para tentar."
 
 #: ../src/redshift.c:1075
-#, fuzzy
 msgid "Waiting for current location to become available..."
-msgstr "Esperando que a localização inicial esteja disponível...\n"
+msgstr "Esperando que a localização fique disponível..."
 
 #: ../src/redshift.c:1086
-#, fuzzy
 msgid "Invalid location from provider."
-msgstr "Localização inválida retornado do provedor\n"
+msgstr "Localização inválida retornado do provedor."
 
 #: ../src/redshift.c:1112
-#, fuzzy
 msgid "Solar elevation"
-msgstr "Elevação solar: %f\n"
+msgstr "Elevação solar"
 
 #: ../src/redshift.c:1147 ../src/redshift.c:1171 ../src/redshift.c:1192
-#, fuzzy
 msgid "Press ctrl-c to stop..."
-msgstr "Pressione Ctrl-c para parar...\n"
+msgstr "Pressione ctrl-c para parar..."
 
 #. TRANSLATORS: help output 1
 #. LAT is latitude, LON is longitude,
@@ -355,16 +317,16 @@ msgstr "Define a temperatura da cor do monitor de acordo com a hora do dia.\n"
 #. TRANSLATORS: help output 3
 #. no-wrap
 #: ../src/options.c:156
-#, fuzzy
 msgid ""
 "  -h\t\tDisplay this help message\n"
 "  -v\t\tIncrease logging verbosity\n"
 "  -q\t\tDecrease logging verbosity\n"
 "  -V\t\tShow program version\n"
 msgstr ""
-"  -h\t\t Exibe essa mensagem de ajuda\n"
-"  -v\t\t Mostra o log \n"
-"  -V\t\t Mostra versão do programa\n"
+"  -h\t\tExibe essa mensagem de ajuda\n"
+"  -v\t\tAumenta a verbosidade do log\n"
+"  -q\t\tDiminui a verbosidade do log\n"
+"  -V\t\tMostra versão do programa\n"
 
 #. TRANSLATORS: help output 4
 #. `list' must not be translated
@@ -387,6 +349,21 @@ msgid ""
 "  -r\t\tDisable fading between color temperatures\n"
 "  -t DAY:NIGHT\tColor temperature to set at daytime/night\n"
 msgstr ""
+"  -b DIA:NOITE\tBrilho da tela para aplicar (entre 0.1 e 1.0)\n"
+"  -c ARQUIVO\tCarrega configurações do arquivo de configuração especificado\n"
+"  -g R:G:B\tCorreção de gama adicional a ser aplicada (vermelho:verde:azul)\n"
+"  -l LAT:LON\tSua localização atual\n"
+"  -l PROVEDOR\tSelecione provedor para atualizações automáticas de localização\n"
+"  \t\t(Insira `list' para ver os provedores disponíveis)\n"
+"  -m MÉTODO\tMétodo para aplicar temperatura de cor\n"
+"  \t\t(Insira `list' para ver os métodos disponíveis)\n"
+"  -o\t\tModo one-shot (não ajustar a temperatura de cor de forma contínua)\n"
+"  -O TEMP\tMode one-shot manual (definir a temperatura de cor)\n"
+"  -p\t\tModo de imprimir (apenas imprime os parâmetros e sai)\n"
+"  -P\t\tReiniciar as escalas de gama existentes antes de aplicar o novo efeito de cor\n"
+"  -x\t\tModo de reiniciar (remove ajustes da tela)\n"
+"  -r\t\tDesabilitar transições entre as temperaturas de cor\n"
+"  -t DIA:NOITE\tTemperatura de cor para aplicar durante dia/noite\n"
 
 #. TRANSLATORS: help output 5
 #: ../src/options.c:187
@@ -398,6 +375,9 @@ msgid ""
 "in\n"
 "more red light.\n"
 msgstr ""
+"A temperatura neutra é %uK. Utilizar esse valor não vai alterar a temperatura\n"
+"de cor do monitor. Definir a temperatura de cor para um valor maior que esse\n"
+"resulta em mais luz azul, e definir um valor menor resulta em mais luz vermelha.\n"
 
 #. TRANSLATORS: help output 6
 #: ../src/options.c:196
@@ -455,14 +435,12 @@ msgid "Try `-h' for more information.\n"
 msgstr "Tente `-h' para mais informações.\n"
 
 #: ../src/options.c:387 ../src/options.c:586
-#, fuzzy
 msgid "Unknown location provider"
-msgstr "Provedor de localização `%s' desconhecido.\n"
+msgstr "Provedor de localização desconhecido"
 
 #: ../src/options.c:419 ../src/options.c:576
-#, fuzzy
 msgid "Unknown adjustment method"
-msgstr "Método de ajuste `%s' desconhecido.\n"
+msgstr "Método de ajuste desconhecido"
 
 #: ../src/options.c:449
 msgid "Malformed temperature argument.\n"
@@ -473,19 +451,16 @@ msgid "Malformed gamma setting.\n"
 msgstr "Definição de gama mal formada.\n"
 
 #: ../src/options.c:596
-#, fuzzy
 msgid "Malformed dawn-time setting"
-msgstr "Definição de gama mal formada.\n"
+msgstr "Definição de gama mal formada"
 
 #: ../src/options.c:606
-#, fuzzy
 msgid "Malformed dusk-time setting"
-msgstr "Definição de gama mal formada.\n"
+msgstr "Definição de gama mal formada"
 
 #: ../src/options.c:612
-#, fuzzy
 msgid "Unknown configuration setting"
-msgstr "Definição de configuração `%s' desconhecida.\n"
+msgstr "Definição de configuração desconhecida"
 
 #: ../src/config-ini.c:143
 msgid "Malformed section header in config file.\n"
@@ -502,7 +477,7 @@ msgstr "Atribuição fora da seção no arquivo de configuração.\n"
 #: ../src/gamma-drm.c:86
 #, c-format
 msgid "Failed to open DRM device: %s\n"
-msgstr ""
+msgstr "Não foi possível abrir o dispositivo DRM: %s\n"
 
 #: ../src/gamma-drm.c:94
 #, c-format
@@ -574,41 +549,40 @@ msgstr "Parâmetro de método desconhecido: `%s'.\n"
 
 #: ../src/gamma-wl.c:70
 msgid "Not authorized to bind the wlroots gamma control manager interface."
-msgstr ""
+msgstr "O programa não está autorizado a se conectar à interface de controle "
+"de gama da biblioteca wlroots."
 
 #: ../src/gamma-wl.c:90
-#, fuzzy
 msgid "Failed to allocate memory"
-msgstr "Não foi possível iniciar método de ajuste %s.\n"
+msgstr "Não foi possível alocar memória"
 
 #: ../src/gamma-wl.c:124
 msgid "The zwlr_gamma_control_manager_v1 was removed"
-msgstr ""
+msgstr "O protocolo zwlr_gamma_control_manager_v1 foi removido"
 
 #: ../src/gamma-wl.c:177
 msgid "Could not connect to wayland display, exiting."
-msgstr ""
+msgstr "Não foi possível se conectar a um monitor Wayland, saindo."
 
 #: ../src/gamma-wl.c:218
 msgid "Ignoring Wayland connection error while waiting to disconnect"
-msgstr ""
+msgstr "Ignorando erro de conexão Wayland enquanto espera para se desconectar"
 
 #: ../src/gamma-wl.c:247
-#, fuzzy
 msgid "Adjust gamma ramps with a Wayland compositor.\n"
-msgstr "Ajuste as escalas gamma com o GDI do Windows.\n"
+msgstr "Ajuste as escalas gamma com um compositor Wayland.\n"
 
 #: ../src/gamma-wl.c:282
 msgid "Wayland connection experienced a fatal error"
-msgstr ""
+msgstr "Ocorreu um erro fatal com a conexão Wayland"
 
 #: ../src/gamma-wl.c:347
 msgid "Zero outputs support gamma adjustment."
-msgstr ""
+msgstr "Zero saídas suportam ajuste de gama."
 
 #: ../src/gamma-wl.c:352
 msgid "output(s) do not support gamma adjustment"
-msgstr ""
+msgstr "saída(s) não suporta(m) ajuste de gama"
 
 #: ../src/gamma-randr.c:83 ../src/gamma-randr.c:142 ../src/gamma-randr.c:181
 #: ../src/gamma-randr.c:207 ../src/gamma-randr.c:264 ../src/gamma-randr.c:424
@@ -647,11 +621,13 @@ msgid ""
 "  screen=N\t\tX screen to apply adjustments to\n"
 "  crtc=N\tList of comma separated CRTCs to apply adjustments to\n"
 msgstr ""
+"  screen=N\t\tTela X na qual aplicar os ajustes\n"
+"  crtc=N\tLista de CRTCs separados por vírgula nos quais aplicar ajustes\n"
 
 #: ../src/gamma-randr.c:317
 #, c-format
 msgid "Unable to read screen number: `%s'.\n"
-msgstr ""
+msgstr "Não foi possível ler o número da tela: `%s'.\n"
 
 #: ../src/gamma-randr.c:353 ../src/gamma-vidmode.c:145
 #, c-format
@@ -659,6 +635,7 @@ msgid ""
 "Parameter `%s` is now always on;  Use the `%s` command-line option to "
 "disable.\n"
 msgstr ""
+"Parâmetro `%s` está agora sempre ligado; Use a opção de linha comando `%s` para desabilitar.\n"
 
 #: ../src/gamma-vidmode.c:50 ../src/gamma-vidmode.c:70
 #: ../src/gamma-vidmode.c:79 ../src/gamma-vidmode.c:106
@@ -675,19 +652,21 @@ msgstr "Ajuste as escalas gamma com a extensão X VidMode.\n"
 #. left column must not be translated
 #: ../src/gamma-vidmode.c:134
 msgid "  screen=N\t\tX screen to apply adjustments to\n"
-msgstr ""
+msgstr "  screen=N\t\tTela X na qual aplicar os ajustes\n"
 
 #: ../src/gamma-dummy.c:32
 msgid ""
 "WARNING: Using dummy gamma method! Display will not be affected by this "
 "gamma method.\n"
 msgstr ""
+"AVISO: Utilizando modo de teste para ajuste de gama! O monitor não será afetado.\n"
 
 #: ../src/gamma-dummy.c:49
 msgid ""
 "Does not affect the display but prints the color temperature to the "
 "terminal.\n"
 msgstr ""
+"Não afeta o monitor mas imprime a temperatura de cor no terminal.\n"
 
 #: ../src/gamma-dummy.c:64
 #, c-format
@@ -701,6 +680,9 @@ msgid ""
 "Ensure location services are enabled and access by this program is "
 "permitted.\n"
 msgstr ""
+"Acesso à localização atual foi negado!\n"
+"Certifique-se que os serviços de localização estão habilitados e que "
+"esse programa tem permissão para acessá-los.\n"
 
 #: ../src/location-geoclue2.c:95
 #, c-format
@@ -734,26 +716,23 @@ msgstr "Não foi possível iniciar o cliente GeoClue: %s.\n"
 
 #: ../src/location-geoclue2.c:380
 msgid "GeoClue2 provider is not installed!"
-msgstr ""
+msgstr "Provedor GeoClue2 não está instalado!"
 
 #: ../src/location-geoclue2.c:387
-#, fuzzy
 msgid "Failed to start GeoClue2 provider!"
-msgstr "Não foi possível iniciar o provedor %s.\n"
+msgstr "Não foi possível iniciar o provedor GeoClue2!"
 
 #: ../src/location-geoclue2.c:422
 msgid "Use the location as discovered by a GeoClue2 provider.\n"
 msgstr "Usar a localização descoberta pelo provedor GeoClue2.\n"
 
 #: ../src/location-geoclue2.c:431 ../src/location-manual.c:96
-#, fuzzy
 msgid "Unknown method parameter"
-msgstr "Parâmetro de método desconhecido: `%s'.\n"
+msgstr "Parâmetro de método desconhecido"
 
 #: ../src/location-manual.c:49
-#, fuzzy
 msgid "Latitude and longitude must be set."
-msgstr "Latitude e longitude precisam ser definidas.\n"
+msgstr "Latitude e longitude precisam ser definidas."
 
 #: ../src/location-manual.c:65
 msgid "Specify location manually.\n"
@@ -798,14 +777,12 @@ msgid "2 hours"
 msgstr "2 horas"
 
 #: ../src/gammastep_indicator/statusicon.py:71
-#, fuzzy
 msgid "4 hours"
-msgstr "2 horas"
+msgstr "4 horas"
 
 #: ../src/gammastep_indicator/statusicon.py:72
-#, fuzzy
 msgid "8 hours"
-msgstr "2 horas"
+msgstr "8 horas"
 
 #: ../src/gammastep_indicator/statusicon.py:81
 msgid "Autostart"
@@ -830,7 +807,7 @@ msgstr "<b>Estado:</b> {}"
 
 #: ../src/gammastep_indicator/statusicon.py:349
 msgid "For help output, please run:"
-msgstr ""
+msgstr "Para informações de ajuda, por favor rode:"
 
 #, fuzzy, c-format
 #~ msgid "Color temperature: %uK"
